# libmempp

./: CMakeLists.txt  LICENSE  README.md  main.cpp  target.cpp
src/: CMakeLists.txt  Process.hpp  ProcessInterface.cpp  ProcessInterface.hpp
src/unix/: CMakeLists.txt  Process.cpp  Process.hpp
src/windows/: CMakeLists.txt
